[header] Fill header contents.
Change-Id: I3923657529b7233e9a5ae83ec5f05e10a82bd301

--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,2 +1,9 @@
 <header>
+  <div class="container">
+    <div class="intro-text ml-3">
+      <div class="intro-lead-in">客戶經營，<br />可以更簡單！</div>
+      <div class="intro-heading">即時的回覆，精準的問答，Chatbot 讓客服不再是難題</div>
+      <a class="btn btn-primary btn-lg" href="#" role="button">立即體驗</a>
+    </div>
+  </div>
 </header>
