--- a/source/assets/css/main.scss
+++ b/source/assets/css/main.scss
@@ -1,3 +1,11 @@
 ---
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
+
+@import
+  "variables",
+  "mixins/font",
+  "mixins/breakpoints",
+  "base",
+  "header"
+;
