--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -4,5 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/10up-sanitize.css/5.0.0/sanitize.min.css" integrity="sha384-hYZ9Kx8N8b63nX/fFXA10qUXrVPuBUPywJEfBGmJgrxyKwsw7MusuYFderoKBcv9" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
 </head>
