--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,13 +4,12 @@
   {%- include head.html -%}
 
   <body>
-
     <main class="page-content" aria-label="Content">
       {{ content }}
     </main>
 
     {%- include footer.html -%}
-
+    {%- include scripts.html -%}
   </body>
 
 </html>
