[nav] Add animation for page scrolling.
Change-Id: I63bcb068f783521dc7c367201ec4b8cfbf10089e

--- a/source/_includes/nav.html
+++ b/source/_includes/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md fixed-top">
   <div class="container">
-    <a class="navbar-brand text-dark" href="#page-top">
+    <a class="navbar-brand text-dark page-scroll" href="#page-top">
       <img src="/assets/images/logo.svg" class="navbar-brand-logo d-inline-block align-middle" alt="">三倍智慧科技
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#about">關於我們</a>
+          <a class="nav-link page-scroll" href="#about">關於我們</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#products">產品服務</a>
+          <a class="nav-link page-scroll" href="#products">產品服務</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#clients">客戶案例</a>
+          <a class="nav-link page-scroll" href="#clients">客戶案例</a>
         </li>
       </ul>
     </div>
