[nav] Highlight the current active nav item in nav bar as scrolling.
Change-Id: I136663f045831e50377a7bb48142316ac20277e6

--- a/source/assets/sass/nav.scss
+++ b/source/assets/sass/nav.scss
@@ -77,3 +77,10 @@ nav.navbar-onscroll .navbar-brand-logo {
   width: 30px;
   height: 30px;
 }
+
+nav .navbar-nav > li > a.active,
+nav .navbar-nav > li > a.active:hover {
+  border-radius: 5px;
+  color: #fff;
+  background-color: $primary-color;
+}
