--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,2 +1,30 @@
-<footer>
+<footer class="bg-dark text-light">
+  <div class="container">
+    <div class="row">
+      <div class="col d-none d-md-block">
+        <span class="copyright">&copy; {{ 'now' | date: "%Y" }} Triple AI, Inc.</span>
+      </div>
+      <div class="col">
+        <div class="footer-logo">
+          <a href="{{ site.url }}"><img src="/assets/images/logo.svg" width="30" height="30"></a>
+        </div>
+      </div>
+      <div class="col">
+        <ul class="list-inline social-buttons">
+          <li class="list-inline-item">
+            <a href="https://www.facebook.com/108976382935124" target="_blank">
+              <!-- Font Awesome CC BY 4.0 License: https://fontawesome.com/license -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 264 512"><path d="M76.7 512V283H0v-91h76.7v-71.7C76.7 42.4 124.3 0 193.8 0c33.3 0 61.9 2.5 70.2 3.6V85h-48.2c-37.8 0-45.1 18-45.1 44.3V192H256l-11.7 91h-73.6v229"/></svg>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="https://www.google.com/maps/place/?q=place_id:ChIJiUaAFimoQjQRSY6bn6Sbqrw" target="_blank">
+              <!-- Font Awesome CC BY 4.0 License: https://fontawesome.com/license -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"/></svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
