[gtm] Setup Google Tag Manager linking.
Change-Id: If46156285764a1d6b5a5ed3744d8eee1f7dbe478

--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,6 +4,13 @@
   {%- include head.html -%}
 
   <body>
+    {%- if jekyll.environment == 'production' and site.google_tag_manager -%}
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_tag_manager }}"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    {%- endif -%}
+
     <main class="page-content" aria-label="Content">
       {{ content }}
     </main>
