--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -4,6 +4,10 @@
   {%- include head.html -%}
 
   <body>
+    {%- if jekyll.environment == 'production' and site.fb_customer_chat and layout.enable_fb_customer_chat -%}
+    {%- include fb-customer-chat.html -%}
+    {%- endif -%}
+
     {%- if jekyll.environment == 'production' and site.google_tag_manager -%}
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.google_tag_manager }}"
