[asset] Obtain asset path with jekyll-assets.
This automatically adds cachebuster to the path. For example:

    <img src="{% asset images/logo.svg @path %}">

would become:

    <img src="/assets/images/logo-4dcdc257210d38fb42cc3525b761316f60684b0b32ec24a5421b878da42bf379.svg">

Change-Id: I0af47a42218d3b831178869d3f01b0d7c7e20243

--- a/source/_includes/clients.html
+++ b/source/_includes/clients.html
@@ -9,10 +9,10 @@
     </div>
     <div class="row">
       <div class="col-md-6">
-        <div class="client-logo" style="background-image: url('/assets/images/client-dmtshop.png');"></div>
+        <div class="client-logo" style="background-image: url('{% asset "images/client-dmtshop.png" @path %}');"></div>
       </div>
       <div class="col-md-6">
-        <div class="client-logo" style="background-image: url('/assets/images/client-drcyjhcc.png');"></div>
+        <div class="client-logo" style="background-image: url('{% asset "images/client-drcyjhcc.png" @path %}');"></div>
       </div>
     </div>
   </div>
