--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -6,7 +6,7 @@
       </div>
       <div class="col">
         <div class="footer-logo">
-          <a href="{{ site.url }}"><img src="/assets/images/logo.svg" width="30" height="30"></a>
+          <a href="{{ site.url }}"><img src="{% asset "images/logo.svg" @path %}"></a>
         </div>
       </div>
       <div class="col">
