--- a/source/_includes/nav.html
+++ b/source/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md fixed-top">
   <div class="container">
     <a class="navbar-brand text-dark page-scroll" href="#page-top">
-      <img src="/assets/images/logo.svg" class="navbar-brand-logo d-inline-block align-middle" alt="">三倍智慧科技
+      <img src="{% asset "images/logo.svg" @path %}" class="navbar-brand-logo d-inline-block align-middle" alt="">三倍智慧科技
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
