--- a/source/_includes/about.html
+++ b/source/_includes/about.html
@@ -11,7 +11,7 @@
         </ul>
       </div>
       <div class="col-md-4">
-        <img class="img-fluid" src="/assets/images/about-demo.gif" alt="">
+        <img class="img-fluid" src="{% asset "images/about-demo.gif" @path %}" alt="">
       </div>
     </div>
   </div>
