--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -21,7 +21,7 @@
  */
 
 header {
-  background-image: url('/assets/images/header-bg.png');
+  background-image: asset_url("images/header-bg.png");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
