--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col d-none d-md-block">
-        <span class="copyright">&copy; {{ 'now' | date: "%Y" }} Triple AI, Inc.</span>
+        <span class="copyright">&copy; {{ 'now' | date: "%Y" }} Triple AI 三倍智慧科技</span>
       </div>
       <div class="col">
         <div class="footer-logo">
