[css] Add Noto Sans TC as second alternative fonts.
This makes our site look decent on Windows!

Thanks @cass.

Change-Id: Ie0a29438d103d52961931e6a42dab9f43c686fe8

--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -20,6 +20,9 @@
  * SOFTWARE.
  */
 
+// Load Noto Sans TC fonts.
+@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+
 body {
   font: $base-font-weight #{$base-font-size}/#{$base-line-height-ratio} $base-font-family;
   color: $text-color;
