--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -23,7 +23,7 @@
 $base-font-weight: 400 !default;
 $base-font-size: 16px !default;
 $base-line-height-ratio: 1.5 !default;
-$base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: -apple-system, BlinkMacSystemFont, "Noto Sans TC", "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
